Improved empty page

--- a/src/empty.html
+++ b/src/empty.html
@@ -104,8 +104,7 @@
 
     <main class="container mt-4 text-center main">
         <h1 class="text-primary py-4 mb-4" id="title-placeholder">Loading...</h1>
-        <p class="text-secondary invisible" id="text-placeholder">The page is currently under construction.
-            <a href="/">Click here</a> to go back to homepage.</p>
+        <p class="text-secondary" id="text-placeholder"></p>
     </main>
 
 
