Changed screen reader error handling to anchor text

--- a/src/login.html
+++ b/src/login.html
@@ -107,8 +107,8 @@
             <section class="col-12 col-md-5 mt-4 login">
                 <div class="p-4 mr-md-3 bg-white">
                     <h1 class="text-primary mb-4">Login</h1>
+                    <h2 class="text-danger mb-4" id="login-error" aria-live="assertive"></h2>
                     <div class="sr-only">
-                        <h2 id="login-error" aria-live="assertive"></h2>
                         <ul id="login-error-list"></ul>
                     </div>
                     <form id="login-form" novalidate>
@@ -137,8 +137,8 @@
             <section class="col-12 col-md-7 mt-4 register">
                 <div class="p-4 bg-white">
                     <h1 class="text-primary mb-4">Create new account</h1>
+                    <h2 class="text-danger mb-4" id="register-error" aria-live="assertive"></h2>
                     <div class="sr-only">
-                        <h2 id="register-error" aria-live="assertive"></h2>
                         <ul id="register-error-list"></ul>
                     </div>
                     <form id="register-form" novalidate>
