--- a/src/article.html
+++ b/src/article.html
@@ -23,8 +23,8 @@
                 <div class="col-4">
                     <div class="btn-toolbar justify-content-end" role="toolbar" aria-labelledby="Change appearance">
                         <div class="btn-group btn-group-sm" role="group" aria-label="Font size">
-                            <button class="btn btn-link" id="font-increase-button" aria-label="Increase font size">Text</button>
-                            <button class="btn btn-link" id="font-decrease-button" aria-label="Decrease font size">Text</button>
+                            <button class="btn btn-dark font-increase-button" id="font-increase-button" aria-label="Increase font size">A+</button>
+                            <button class="btn btn-dark font-decrease-button" id="font-decrease-button" aria-label="Decrease font size">A-</button>
                         </div>
                     </div>
                 </div>
@@ -112,8 +112,8 @@
             <div class="d-lg-none">
                 <div class="btn-toolbar justify-content-end" role="toolbar" aria-labelledby="Change appearance">
                     <div class="btn-group btn-group-sm" role="group" aria-label="Font size">
-                        <button class="btn btn-link text-white" id="font-increase-button-1" aria-label="Increase font size">Text</button>
-                        <button class="btn btn-link text-white" id="font-decrease-button-1" aria-label="Decrease font size">Text</button>
+                        <button class="btn btn-dark text-white font-increase-button" id="font-increase-button-1" aria-label="Increase font size">A+</button>
+                        <button class="btn btn-dark text-white font-decrease-button" id="font-decrease-button-1" aria-label="Decrease font size">A-</button>
                     </div>
                 </div>
             </div>
@@ -125,7 +125,7 @@
             <h1 class="text-primary mb-4">Global temperature record shows 2016 as the warmest year on record</h1>
             <div class="text-center wrapper">
                 <figure class="figure mb-4">
-                    <img src="./img/temperature.jpg" class="figure-img img-fluid rounded" alt="Global mean surface temperature">
+                    <img src="./img/temperature.jpg" class="figure-img img-fluid" alt="Global mean surface temperature">
                     <figcaption class="figure-caption text-center">Global mean surface temperature change since 1880.
                         <br>The grey curve indicates the annual average temperature and the black curve shows the smoothed result.</figcaption>
                 </figure>
