--- a/src/index.html
+++ b/src/index.html
@@ -121,16 +121,19 @@
     </nav>
 
     <main class="container main">
+        <div class="sr-only">
+            <h1>Welcome to Lorem Ipsum Institute of Technolgoy</h1>
+        </div>
         <div class="row no-gutters">
             <div class="col-12 col-lg-6">
                 <section class="p-4 mt-4 mr-lg-3 bg-white news">
-                    <h1 class="text-primary mb-4">News &amp; events</h1>
+                    <h2 class="text-primary mb-4">News &amp; events</h2>
                     <article class="media mt-4">
                         <img class="my-1 mr-2 rounded-right" src="./img/iceberg.jpg" alt="Photo of an iceberg">
                         <div class="media-body">
-                            <h2 class="text-info mt-0 mb-2">
+                            <h3 class="text-info mt-0 mb-2">
                                 <a href="/article.html">Global temperature record</a>
-                            </h2>
+                            </h3>
                             <p>
                                 The global surface temperature relative to 1951-1980 average recently published by NASA shows that 2016 ranks as the warmest
                                 year on record.
@@ -143,9 +146,9 @@
                     <article class="media mt-4">
                         <img class="my-1 mr-2 rounded-right" src="./img/universe.jpg" alt="Photo of a galaxy">
                         <div class="media-body">
-                            <h2 class="text-info mt-0 mb-2">
+                            <h3 class="text-info mt-0 mb-2">
                                 <a href="/empty.html?title=Article">At iam decimum annum in spelunca iacet</a>
-                            </h2>
+                            </h3>
                             <p>
                                 Immo vero, inquit, ad beatissime vivendum parum est, ad beate vero satis. Claudii libidini, qui tum erat summo ne imperio,
                                 dederetur. Ergo id est convenienter naturae vivere, a natura discedere.
@@ -158,9 +161,9 @@
                     <article class="media mt-4">
                         <img class="my-1 mr-2 rounded-right" src="./img/robots.jpg" alt="Photo of a robot">
                         <div class="media-body">
-                            <h2 class="text-info mt-0 mb-2">
+                            <h3 class="text-info mt-0 mb-2">
                                 <a href="/empty.html?title=Article">Quo plebiscito decreta a senatu est consuli quaestio Cn</a>
-                            </h2>
+                            </h3>
                             <p>
                                 Comprehensum, quod cognitum non habet? Quia nec honesto quic quam honestius nec turpi turpius. Maximeque eos videre possumus
                                 res gestas audire et legere velle, qui a spe gerendi absunt confecti senectute. Est enim
@@ -175,7 +178,7 @@
             </div>
             <div class="col-12 col-lg-6">
                 <section class="p-4 mt-4 bg-white studies">
-                    <h1 class="text-primary mb-4">Studies</h1>
+                    <h2 class="text-primary mb-4">Studies</h2>
                     <p class="font-weight-bold">Advance your scientific education</p>
                     <ul class="list-unstyled ml-3">
                         <li>
@@ -191,7 +194,7 @@
                 </section>
 
                 <section class="p-4 mt-4 bg-white researches">
-                    <h1 class="text-primary mb-4">Researches</h1>
+                    <h2 class="text-primary mb-4">Researches</h2>
                     <p class="font-weight-bold">Join our renowned research groups</p>
                     <p class="ml-3">
                         <a href="/empty.html?title=Doctorate">Doctoral programmes</a>
