Updated field set name

--- a/src/login.html
+++ b/src/login.html
@@ -161,7 +161,7 @@
                     </div>
                     <form id="register-form" novalidate>
                         <fieldset class="form-group" role="group" aria-labelledby="register-basic-legend">
-                            <legend class="form-label" id="register-basic-legend">Required information</legend>
+                            <legend class="form-label" id="register-basic-legend">Basic information</legend>
                             <div class="form-row">
                                 <div class="form-group col-12 col-lg-6">
                                     <label for="register-first-name-control">First name
