--- a/src/login.html
+++ b/src/login.html
@@ -9,6 +9,7 @@
 </head>
 
 <body class="bg-light">
+    <a class="sr-only" href="#main">Skip to main content</a>
     <header class="container-fluid d-none d-lg-block my-4 header">
         <div class="container">
             <div class="row no-gutters">
@@ -21,7 +22,7 @@
                     </div>
                 </div>
                 <div class="col-4">
-                    <div class="btn-toolbar justify-content-end" role="toolbar" aria-labelledby="Change appearance">
+                    <div class="btn-toolbar justify-content-end" role="toolbar">
                         <div class="btn-group btn-group-sm" role="group" aria-label="Font size">
                             <button class="btn btn-dark font-increase-button" id="font-increase-button" aria-label="Increase font size">A+</button>
                             <button class="btn btn-dark font-decrease-button" id="font-decrease-button" aria-label="Decrease font size">A-</button>
@@ -35,9 +36,9 @@
     <nav class="container-fluid bg-dark nav">
         <div class="container">
             <div class="navbar navbar-dark bg-dark navbar-expand-lg px-0">
-                <a class="navbar-brand d-lg-none" href="#">
+                <div class="navbar-brand d-lg-none">
                     <img class="rounded-right" src="./img/logo.jpg" width="40" height="40" alt="Unversity logo">
-                </a>
+                </div>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-bar-content" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -110,7 +111,7 @@
                 </div>
             </div>
             <div class="d-lg-none">
-                <div class="btn-toolbar justify-content-end" role="toolbar" aria-labelledby="Change appearance">
+                <div class="btn-toolbar justify-content-end" role="toolbar">
                     <div class="btn-group btn-group-sm" role="group" aria-label="Font size">
                         <button class="btn btn-dark text-white font-increase-button" id="font-increase-button-1" aria-label="Increase font size">A+</button>
                         <button class="btn btn-dark text-white font-decrease-button" id="font-decrease-button-1" aria-label="Decrease font size">A-</button>
@@ -120,12 +121,12 @@
         </div>
     </nav>
 
-    <main class="container main">
+    <main class="container main" id="main">
         <div class="row no-gutters">
             <section class="col-12 col-md-5 mt-4 login">
                 <div class="p-4 mr-md-3 bg-white">
                     <h1 class="text-primary mb-4">Login</h1>
-                    <h2 class="text-danger mb-4" id="login-error" aria-live="assertive"></h2>
+                    <h2 class="text-danger mb-4 d-none" id="login-error" aria-live="assertive">Please correct the error(s)</h2>
                     <div class="sr-only">
                         <ul id="login-error-list"></ul>
                     </div>
@@ -155,7 +156,7 @@
             <section class="col-12 col-md-7 mt-4 register">
                 <div class="p-4 bg-white">
                     <h1 class="text-primary mb-4">Create new account</h1>
-                    <h2 class="text-danger mb-4" id="register-error" aria-live="assertive"></h2>
+                    <h2 class="text-danger mb-4 d-none" id="register-error" aria-live="assertive">Please correct the error(s)</h2>
                     <div class="sr-only">
                         <ul id="register-error-list"></ul>
                     </div>
