--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
                     </div>
                 </div>
                 <div class="col-4">
-                    <div class="btn-toolbar justify-content-end" role="toolbar">
+                    <div class="btn-toolbar justify-content-end" role="toolbar" aria-label="Change appearance">
                         <div class="btn-group btn-group-sm" role="group" aria-label="Font size">
                             <button class="btn btn-dark font-increase-button" id="font-increase-button" aria-label="Increase font size">A+</button>
                             <button class="btn btn-dark font-decrease-button" id="font-decrease-button" aria-label="Decrease font size">A-</button>
@@ -111,7 +111,7 @@
                 </div>
             </div>
             <div class="d-lg-none">
-                <div class="btn-toolbar justify-content-end" role="toolbar">
+                <div class="btn-toolbar justify-content-end" role="toolbar" aria-label="Change appearance">
                     <div class="btn-group btn-group-sm" role="group" aria-label="Font size">
                         <button class="btn btn-dark text-white font-increase-button" id="font-increase-button-1" aria-label="Increase font size">A+</button>
                         <button class="btn btn-dark text-white font-decrease-button" id="font-decrease-button-1" aria-label="Decrease font size">A-</button>
