Switched to article html tag

--- a/src/article.html
+++ b/src/article.html
@@ -122,8 +122,8 @@
     </nav>
 
     <main class="container mt-4 main" id="main">
-        <div class="p-4 bg-white">
-            <h1 class="text-primary mb-4">Global temperature record shows 2016 as the warmest year on record</h1>
+        <article class="p-5 bg-white">
+            <h1 class="text-primary text-center mb-4">Global temperature record shows 2016 as the warmest year on record</h1>
             <div class="text-center wrapper">
                 <figure class="figure mb-4">
                     <img src="./img/temperature.jpg" class="figure-img img-fluid" alt="Graphic of global mean temperature change from since 1880.">
@@ -203,7 +203,7 @@
                     </tbody>
                 </table>
             </div>
-        </div>
+        </article>
     </main>
 
     <footer class="container-fluid bg-dark mt-4 footer">
