--- a/src/empty.html
+++ b/src/empty.html
@@ -49,9 +49,9 @@
                             <a class="nav-link" href="/">Homepage</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-houses" role="button" data-toggle="dropdown" aria-haspopup="true"
+                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-faculties" role="button" data-toggle="dropdown" aria-haspopup="true"
                                 aria-expanded="false">Faculties</a>
-                            <ul class="dropdown-menu" aria-labelledby="nav-bar-houses">
+                            <ul class="dropdown-menu" aria-labelledby="nav-bar-faculties">
                                 <li>
                                     <a class="dropdown-item" href="/empty.html?title=Applied+sciences">Applied sciences</a>
                                 </li>
@@ -70,9 +70,9 @@
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-houses" role="button" data-toggle="dropdown" aria-haspopup="true"
+                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-education" role="button" data-toggle="dropdown" aria-haspopup="true"
                                 aria-expanded="false">Education &amp; research</a>
-                            <ul class="dropdown-menu" aria-labelledby="nav-bar-houses">
+                            <ul class="dropdown-menu" aria-labelledby="nav-bar-education">
                                 <li>
                                     <a class="dropdown-item" href="/empty.html?title=Bachelor">Bachelor</a>
                                 </li>
@@ -88,9 +88,9 @@
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-express" role="button" data-toggle="dropdown" aria-haspopup="true"
+                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-industry" role="button" data-toggle="dropdown" aria-haspopup="true"
                                 aria-expanded="false">Industry &amp; partners</a>
-                            <ul class="dropdown-menu" aria-labelledby="nav-bar-express">
+                            <ul class="dropdown-menu" aria-labelledby="nav-bar-industry">
                                 <li>
                                     <a class="dropdown-item" href="/empty.html?title=Public+relations">Public relations</a>
                                 </li>
