Added custom dropdown menu handling for index

--- a/src/index.html
+++ b/src/index.html
@@ -39,8 +39,7 @@
                 <div class="navbar-brand d-lg-none">
                     <img class="rounded-right" src="./img/logo.jpg" width="40" height="40" alt="Unversity logo">
                 </div>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-bar-content" aria-expanded="false"
-                    aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="nav-bar-content">
@@ -49,7 +48,7 @@
                             <a class="nav-link" href="/">Homepage</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-faculties" role="button" data-toggle="dropdown" aria-haspopup="true"
+                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-faculties" role="button" aria-haspopup="true"
                                 aria-expanded="false">Faculties</a>
                             <ul class="dropdown-menu" aria-labelledby="nav-bar-faculties">
                                 <li>
@@ -70,7 +69,7 @@
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-education" role="button" data-toggle="dropdown" aria-haspopup="true"
+                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-education" role="button" aria-haspopup="true"
                                 aria-expanded="false">Education &amp; research</a>
                             <ul class="dropdown-menu" aria-labelledby="nav-bar-education">
                                 <li>
@@ -88,7 +87,7 @@
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-industry" role="button" data-toggle="dropdown" aria-haspopup="true"
+                            <a class="nav-link dropdown-toggle" href="#" id="nav-bar-industry" role="button" aria-haspopup="true"
                                 aria-expanded="false">Industry &amp; partners</a>
                             <ul class="dropdown-menu" aria-labelledby="nav-bar-industry">
                                 <li>
